z-index fix

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -26,7 +26,6 @@
                 margin: auto;
                 text-align: center;
                 vertical-align: middle;
-                z-index: 8888888888;
                 font-family: 'Octicons Regular';
                 border-radius: 50%;
                 line-height: 19px;
